[gd_scene load_steps=13 format=3 uid="uid://mutqyffeic2w"]

[ext_resource type="Script" uid="uid://b4hp1omkcke2p" path="res://Monster/TestEnemy.gd" id="1_j8nw3"]
[ext_resource type="PackedScene" uid="uid://c5jxwgi33ejgv" path="res://Monster/HitDetection.tscn" id="2_0d1mx"]
[ext_resource type="PackedScene" uid="uid://dkh3g5sc7dqjq" path="res://Monster/projectiles.tscn" id="2_544w4"]
[ext_resource type="Texture2D" uid="uid://7qydsi5xynto" path="res://Monster/Sprites/tower.png" id="3_fdxy7"]
[ext_resource type="AudioStream" uid="uid://d3pgqq2vwexw8" path="res://soundFX/63_Get_hit_02.wav" id="4_k1eda"]
[ext_resource type="AudioStream" uid="uid://xbu7olgjepl0" path="res://soundFX/69_Enemy_death_01.wav" id="5_lcyo2"]
[ext_resource type="PackedScene" uid="uid://f5vf2voeomvh" path="res://Monster/HitDetectionNoDamage.tscn" id="6_s5oe5"]
[ext_resource type="AudioStream" uid="uid://i6qabg5yki7m" path="res://soundFX/09_Impact_01.wav" id="7_d535y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0wjv0"]
radius = 53.0
height = 176.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bbeiu"]
radius = 24.0
height = 52.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p7eq8"]
radius = 26.0
height = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ko4gd"]
radius = 272.5

[node name="TestEnemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_j8nw3")
BulletScene = ExtResource("2_544w4")
FireDelay = 1.0
bulletSpeed = 150

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.5, 0.500002)
scale = Vector2(2.40625, 3.03125)
texture = ExtResource("3_fdxy7")

[node name="CollissionBox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_0wjv0")

[node name="Health" parent="." instance=ExtResource("2_0d1mx")]
collision_layer = 5
collision_mask = 8
health = 10

[node name="DamageBox" type="CollisionShape2D" parent="Health"]
position = Vector2(-1, -24)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_bbeiu")

[node name="Body" parent="." instance=ExtResource("6_s5oe5")]
collision_mask = 8

[node name="InvincibleBox" type="CollisionShape2D" parent="Body"]
position = Vector2(-1, 19)
shape = SubResource("CapsuleShape2D_p7eq8")

[node name="NoDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_d535y")
volume_db = 2.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k1eda")
volume_db = 2.0

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lcyo2")
volume_db = 2.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.5, 0.5)
scale = Vector2(3.85, 4.85)

[node name="CharacterDetection" type="Area2D" parent="."]
position = Vector2(-1.5, 0.5)
collision_layer = 0
collision_mask = 2

[node name="Detector" type="CollisionShape2D" parent="CharacterDetection"]
position = Vector2(8, 16)
shape = SubResource("CircleShape2D_ko4gd")

[node name="FireDelay" type="Timer" parent="."]
wait_time = 0.16
one_shot = true

[connection signal="dead" from="Health" to="." method="_on_health_dead"]
[connection signal="hit" from="Health" to="." method="_on_health_hit"]
[connection signal="hitNoDamage" from="Body" to="." method="_on_body_hit_no_damage"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="area_entered" from="CharacterDetection" to="." method="_on_character_detection_area_entered"]
[connection signal="area_exited" from="CharacterDetection" to="." method="_on_character_detection_area_exited"]
